...
    Container(padding: EdgeInsets.fromLTRB(20,200,20,0), child: Center(child: Column(children: [
      //Container(child: Image.asset('assets/images/info1.0.png'), width: 300, height: 300,),
      Text("Enter Your Name", key: Key("nameText"), style: TextStyle(fontSize: 20)),
      Padding(padding: EdgeInsets.fromLTRB(0, 60, 0, 0)),
      TextField(key: Key("nameTextField"),
                controller: _name, 
                decoration: InputDecoration(border: OutlineInputBorder(),
...
      ElevatedButton(onPressed: () {setState(() {_index = 1;});}, 
      style: ElevatedButton.styleFrom(backgroundColor: Color(0xFFF79802)), 
      key: Key("nameButton"), child: Text("Submit")),
      Container(child: Image.asset('assets/images/info1.0.png'), width: 300, height: 300,),])),),
      //////////////////////////////////////////////////////////////////////////////////////////////
...
    ////////////////////////////////////// AGE /////////////////////////////////////////////////////
    Container(padding: EdgeInsets.fromLTRB(20,200,20,0), child: Center(child: Column(children: [
      Text("Enter Your Age", key: Key("ageText"), style: TextStyle(fontSize: 20)),
      Padding(padding: EdgeInsets.fromLTRB(0, 50, 0, 0)),
      TextField(key: Key("ageTextField"), 
                controller: _age, 
                decoration: InputDecoration(border: OutlineInputBorder(),
...
      ElevatedButton(onPressed: () {setState(() {_index = 2;});},
      style: ElevatedButton.styleFrom(backgroundColor: Color(0xFFF79802)),
      key: Key("ageButton"), child: Text("Submit")),
      Container(child: Image.asset('assets/images/info2.png'), width: 300, height: 300,),])),),
      //////////////////////////////////////////////////////////////////////////////////////////////
...
    //////////////////////////////////////// SEX ////////////////////////////////////////////////////
    Container(padding: EdgeInsets.fromLTRB(20,200,20,0), child: Center(child: Column(children: [
      Text("Enter Your Sex", key: Key("sexText"), style: TextStyle(fontSize: 20)),
      Padding(padding: EdgeInsets.fromLTRB(0, 50, 0, 0)),
      TextField(key: Key("sexTextField"), 
                controller: _sex, 
                decoration: InputDecoration(border: OutlineInputBorder(),
...
      ElevatedButton(onPressed: () {setState(() {_index = 3;});},
      style: ElevatedButton.styleFrom(backgroundColor: Color(0xFFF79802)), 
      key: Key("sexButton"), child: Text("Submit")),
      Padding(padding: EdgeInsets.fromLTRB(0, 200, 0, 10)),
      Container(child: Image.asset('assets/images/happyFlan.png'), width: 70, height: 70,)]))),
...
    ///////////////////////////////////////// WEIGHT ///////////////////////////////////////////////
    Container(padding: EdgeInsets.fromLTRB(20,200,20,0), child: Center(child: Column(children: [
      Text("Enter Your Weight", key: Key("weightText"), style: TextStyle(fontSize: 20)),
      Padding(padding: EdgeInsets.fromLTRB(0, 50, 0, 0)),
      TextField(key: Key("weightTextField"), 
                controller: _weight, 
                decoration: InputDecoration(border: OutlineInputBorder(),
...
      ElevatedButton(onPressed: () {setState(() {_index = 4;});},
      style: ElevatedButton.styleFrom(backgroundColor: Color(0xFFF79802)),
      key: Key("weightButton"), child: Text("Submit")),
      Padding(padding: EdgeInsets.fromLTRB(0, 200, 0, 10)),
      Container(child: Image.asset('assets/images/happyFlan.png'), width: 70, height: 70,)]))),
...
    /////////////////////////////////////////// HEIGHT ////////////////////////////////////////////////
    Container(padding: EdgeInsets.fromLTRB(20,200,20,0), child: Center(child: Column(children: [
      Text("Enter Your Height", key: Key("heightText"), style: TextStyle(fontSize: 20)),
      Padding(padding: EdgeInsets.fromLTRB(0, 50, 0, 0)),
      TextField(key: Key("heightTextField"), 
                controller: _height, 
                decoration: InputDecoration(border: OutlineInputBorder(),
...
      ElevatedButton(onPressed: () {setState(() {_index = 5;});},
      style: ElevatedButton.styleFrom(backgroundColor: Color(0xFFF79802)),
      key: Key("heightButton"), child: Text("Submit")),
      Padding(padding: EdgeInsets.fromLTRB(0, 200, 0, 10)),
      Container(child: Image.asset('assets/images/happyFlan.png'), width: 70, height: 70,)]))),
...
    ////////////////////////////////////////// BUDGET //////////////////////////////////////////////////
    Container(padding: EdgeInsets.fromLTRB(20,200,20,0), child: Center(child: Column(children: [
      Text("Enter Your Budget", key: Key("budgetText"), style: TextStyle(fontSize: 20),),
      Padding(padding: EdgeInsets.fromLTRB(0, 50, 0, 0)),
      TextField(key: Key("budgetTextField"), 
                controller: _budget, 
                decoration: InputDecoration(border: OutlineInputBorder(),
...
      ElevatedButton(onPressed: () {setState(() {_index = 6;});},
      style: ElevatedButton.styleFrom(backgroundColor: Color(0xFFF79802)),
      key: Key("budgetButton"), child: Text("Submit")),
      Padding(padding: EdgeInsets.fromLTRB(0, 200, 0, 10)),
      Container(child: Image.asset('assets/images/happyFlan.png'), width: 70, height: 70,)]))),
...
    //////////////////////////////////////// TIME FRAME ////////////////////////////////////////////////
    Container(padding: EdgeInsets.fromLTRB(20,200,20,0), child: Center(child: Column(children: [
      Text("Select Your Time Frame", key: Key("timeFrameText"), style: TextStyle(fontSize: 20),),
      // TextField(key: Key("timeFrameTextField"), controller: _timeFrame, decoration: InputDecoration(border: OutlineInputBorder(),
      //           label: Text('Time Frame',key: Key("timeFrameLabel"),)),),
...
      ),
      RadioListTile(
          key: Key("option2"),
          title: const Text('2 Weeks'),
          value: selected2,
...
      
      Padding(padding: EdgeInsets.fromLTRB(0, 20, 0, 0)),
      ElevatedButton(key: Key("timeFrameButton"),
      style: ElevatedButton.styleFrom(backgroundColor: Color(0xFFF79802)),
        onPressed: () async{
...
