...
                    ),
                    Padding(
                      padding: EdgeInsets.fromLTRB(0, 40, 0, 0),
                      child: Text(
                        "Favorites",
                        style: TextStyle(fontSize: 18, fontFamily: 'Montserrat'),
                        key: Key("favoriteText"),
                      ),
                    ),
                    Padding(padding: EdgeInsets.fromLTRB(0, 10, 0, 10)),
                    widget.local.hasFavs ? 
                    SizedBox(height: 200,child:
                      ListView.builder( 
...
                      }})) : 
                    Container(child: Text("No items"), padding: EdgeInsets.fromLTRB(0, 0, 0, 150),),
                    Padding(
                      padding: EdgeInsets.fromLTRB(0, 20, 0, 0),
                      child: ElevatedButton(
                        style: ElevatedButton.styleFrom(minimumSize: Size(100, 50)),
                        key: Key("mainScreenButton"),
                        onPressed: () async {widget.local.clearVal();
                          final snapshot = await FirebaseDatabase.instance
                                    .ref("profiles/${widget.user}");
                                    await snapshot.update({"Spent": widget.local.spent});
                          setState(() {
                            widget.local.spent;
                          });
                          Navigator.pushReplacement(context, MaterialPageRoute(builder: (context) => MainScreen(widget.user, widget.local)));
                        },
                        child: Text(
                          "Confirm",
                          key: Key("buttonText"),
                        ),
                      ),
                    ),
                  ],
                );
      }
...
                    List<dynamic> set = snapshot.data as List<dynamic>;
                return Column(
                  children: <Widget>[
                    Padding(
                      padding: EdgeInsets.fromLTRB(0, 50, 0, 30),
                      child: Text(
                        "Items",
                        textAlign: TextAlign.center,
                        style: TextStyle(fontSize: 24, fontFamily: 'Montserrat'),
                        key: Key("itemsMainText"),
                      ),
                    ),
                  SizedBox(height: 580,child:
                  ListView.builder( 
                  shrinkWrap: true,
                  scrollDirection: Axis.vertical,
...
                      ],
                    )
                ],);},)),
                  Padding(
                      padding: EdgeInsets.fromLTRB(0, 20, 0, 0),
                      child: ElevatedButton(
                        key: Key("itemsScreenButton"),
                        onPressed: () async{widget.local.clearVal();
                          final snapshot = await FirebaseDatabase.instance
                                      .ref("profiles/${widget.user}");
                                      await snapshot.update({"Spent": widget.local.spent});
                          Navigator.pushReplacement(context, MaterialPageRoute(builder: (context) => MainScreen(widget.user, widget.local)));
                        },
                        child: Text(
                          "Confirm",
                          key: Key("itemsButtonText"),
                        ),
                      ),
                    ),
                  ]);
              }return CircularProgressIndicator();}), 
                //------------End of Items Screen section (Items Tab)------------
...
        resizeToAvoidBottomInset: false,
        appBar: AppBar(
          backgroundColor: Color(0xFFF79802),
          leading: Icon(Icons.arrow_back, color: Colors.transparent,),
          actions: [
            IconButton(
              key: Key("searchButton"),
                onPressed: () {
                  showSearch(context: context, delegate: CustomSearch(widget.local, widget.user));
                },
                icon: Icon(Icons.search)),
            IconButton(
              key: Key("settingsButton"),
                onPressed: () {
                  Navigator.push(
                      context,
                      MaterialPageRoute(
                          builder: (context) => SettingsScreen(widget.local, widget.user)));
                },
                icon: Icon(Icons.settings)),
          ],
        ),
        body:Center(child: _widgets.elementAt(_index)),
        bottomNavigationBar: BottomNavigationBar(
          key: Key("tabs"),
          selectedIconTheme: IconThemeData(color: Colors.black),
          selectedLabelStyle: TextStyle(color: Colors.black),
          selectedItemColor: Colors.black,
          backgroundColor: Color(0xFFF79802),
          items: <BottomNavigationBarItem>[
            BottomNavigationBarItem(
              icon: Icon(Icons.home, key: Key("homeTab"),),
              label: 'Home',
            ),
            BottomNavigationBarItem(
              icon: Icon(Icons.format_list_bulleted_rounded, key: Key("itemsTab"),),
              label: 'Items',
            ),
            BottomNavigationBarItem(
              icon: Icon(Icons.ramen_dining_outlined, key: Key("mealTab"),),
              label: 'Meals',
            ),
          ],
          currentIndex: _index,
          onTap: (int value) {
            setState(() {
...
    ];
  }

  @override
  Widget buildLeading(BuildContext context) {
    return IconButton(
        key: Key("returnSearch"),
        onPressed: () {
          close(context, null);
        },
        icon: Icon(Icons.backspace));
  }

...
