...
            Container(child: Image.asset('assets/images/newflan.png'), width: 300, height: 300,),
            /*
            Padding(
              padding: EdgeInsets.fromLTRB(20, 0, 20, 0),
              child: Text(
                "Login",
                key: Key("secondScreenTest"),
                style: TextStyle(fontSize: 18, fontFamily: 'Montserrat'),
              ),
            )*/
            Padding(
              padding: EdgeInsets.fromLTRB(0, 0, 0, 0),
            ),
            Container(
              padding: EdgeInsets.fromLTRB(20, 10, 20, 0),
              child: TextField(
                key: Key("usernameTextField"),
                controller: _username,
                decoration: const InputDecoration(
                  filled: true,
                  fillColor: Colors.white,
                  //border: OutlineInputBorder(),
                  label: Text(
                    'Username',
                    style: TextStyle(color: Colors.black),
                    key: Key("usernameText"),
                  ),
                ),
              ),
            ),
            Container(
              padding: EdgeInsets.fromLTRB(20, 10, 20, 0),
              child: TextField(
                key: Key("passwordTextField"),
                obscureText: true,
                controller: _password,
                decoration: const InputDecoration(
                  filled: true,
                  fillColor: Colors.white,
                  //border: OutlineInputBorder(),
                  label: Text(
                    'Password',
                    style: TextStyle(color: Colors.black),
                    key: Key("passwordText"),
                  ),
                ),
              ),
            ),
            Container(
                width: 200,
                height: 69,
                padding: const EdgeInsets.fromLTRB(0, 20, 0, 0),
                child: ElevatedButton(
                  style: ElevatedButton.styleFrom(backgroundColor: Colors.black),
                  key: Key("loginButton"),
                  child: const Text(
                    'Login',
                    key: Key("loginTextButton"),
                  ),
                  onPressed: () async {
                    final snapshot = await FirebaseDatabase.instance
                        .ref("profiles/${_username.text}/username")
                        .get();
                    final passSnapshot = await FirebaseDatabase.instance
...
                      MaterialPageRoute(
                          builder: (context) => createAccScreen(widget.local)));
                },
                child: Text(
                  "Create an Account",
                  style: TextStyle(color: Colors.black),
                  key: Key("createAccText"),
                ),
                key: Key("createAccButton"),
              ),
            )
          ],
        ),
      ),
    );
...
