...
    return Scaffold(
      backgroundColor: Color(0xFFF79802),
      resizeToAvoidBottomInset: false,
      appBar: AppBar(
        backgroundColor: Colors.transparent,
        leading: IconButton(
          key: Key("createAccBack"),
          icon: Icon(
            Icons.keyboard_backspace,
            color: Colors.black,
          ),
          onPressed: () {
            Navigator.of(context).pop();
...
            Padding(padding: EdgeInsets.fromLTRB(0, 30, 0, 0)),
            Row(children: [
              Padding(
              padding: EdgeInsets.fromLTRB(25, 0, 40, 0),
              child: Text(
                "Create \nNew \nAccount!!!",
                key: Key("createAccScreenText"),
                style: TextStyle(fontSize: 48, fontFamily: 'Arial', fontWeight: FontWeight.bold),
              ),
            ),],),
            Padding(padding: EdgeInsets.fromLTRB(0, 50, 0, 0)),
            Container(
              padding: EdgeInsets.fromLTRB(20, 10, 20, 0),
              child: TextField(
                key: Key("createAccUsernameField"),
                controller: _username,
                decoration: const InputDecoration(
                  filled: true,
                  fillColor: Colors.white,
                  label: Text(
                    'Username',
                    style: TextStyle(color: Colors.black),
                    key: Key("createAccUsernameText"),
                  ),
                ),
                
              ),
            ),
            Container(
              padding: EdgeInsets.fromLTRB(20, 10, 20, 0),
              child: TextField(
                key: Key("createAccPasswordField"),
                obscureText: true,
                controller: _password,
                decoration: const InputDecoration(
                  filled: true,
                  fillColor: Colors.white,
                  label: Text(
                    'Password',
                    style: TextStyle(color: Colors.black),
                    key: Key("createAccPasswordText"),
                  ),
                ),
              ),
            ),
            Container(
                width: 200,
                height: 69,
                padding: const EdgeInsets.fromLTRB(0, 20, 0, 0),
                child: ElevatedButton(
                  style: ElevatedButton.styleFrom(backgroundColor: Colors.black),
                  key: Key("submitAccButton"),
                  child: const Text(
                    'Create Account', style: TextStyle(color: Colors.white),
                    key: Key("submitAccTextButton"),
                  ),
                  onPressed: () async {
                    if (_password.text.length > 8 &&
                        _username.text.length > 4) {
                      await newMyRef.child(_username.text);
                      DatabaseReference myNewRef = FirebaseDatabase.instance
...
